--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     </div>
 
     <div class="middle-container">
-
+      <a class="btn Facebook" href="#">Facebook</a>
+      <a class="btn Instagram" href="https://instagram.com/arengacademy?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a>
+      <a class="btn Telegram" href="https://t.me/ArEngAcademy">Telegram</a>
+      <a class="btn Linkedin" href="https://www.linkedin.com/in/ar-engacademy-a16ab7289">Linkedin</a>
+      <a class="btn YouTube" href="https://www.youtube.com/@ArEngAcademy">YouTube</a>
+      <a class="btn Tiktok" href="https://www.tiktok.com/@arengacademy">Tiktok</a>
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="#">Facebook</a>
-      <a class="footer-link" href="https://instagram.com/arengacademy?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a>
-      <a class="footer-link" href="https://t.me/ArEngAcademy">Telegram</a>
-      <a class="footer-link" href="https://www.linkedin.com/in/ar-engacademy-a16ab7289">Linkedin</a>
-      <a class="footer-link" href="https://www.youtube.com/@ArEngAcademy">YouTube</a>
-      <a class="footer-link" href="https://www.tiktok.com/@arengacademy">Tiktok</a>
+
     </div>
 
     <footer>
