--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   </head>
   <body>
     <div class="top-container">
+      <img src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
       <h1>
         اكاديمية الهندسة العربية
       </h1>
       <hr>
       <h2>وصف للاكاديمية بكلمات مختصرة</h2>
     </div>
-
+    <img src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
     <div class="middle-container">
       <a class="btn Facebook" href="#">Facebook</a>
       <a class="btn Instagram" href="https://instagram.com/arengacademy?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a>
@@ -25,7 +26,7 @@
     </div>
 
     <div class="bottom-container">
-
+      <img src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
     </div>
 
     <footer>
