--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
   </head>
   <body>
     <div class="top-container">
-      <img src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
+      <img class="logo" src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
       <h1>
         اكاديمية الهندسة العربية
       </h1>
       <hr>
-      <h2>وصف للاكاديمية بكلمات مختصرة</h2>
+      <h2 class="headline">
+        نحاول دائما تحسين وتطوير المهندس العربي من خلال تقديم الكورسات المطلوبة في سوق العمل
+        لتغطية الفجوة بين الدراسة الجامعية وسوق العلم
+      </h2>
     </div>
-    <img src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
+    <img class="logo" src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
     <div class="middle-container">
+      <h2>المنصات الرسمية على مواقع التواصل الاجتماعي</h2>
       <a class="btn Facebook" href="#">Facebook</a>
       <a class="btn Instagram" href="https://instagram.com/arengacademy?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a>
       <a class="btn Telegram" href="https://t.me/ArEngAcademy">Telegram</a>
@@ -26,11 +30,8 @@
     </div>
 
     <div class="bottom-container">
-      <img src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
+      <a href="Team.html" class="footer-link">التواصل مع الكادر</a>
+
     </div>
-
-    <footer>
-
-    </footer>
   </body>
 </html>
