--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <img class="logo" src="image/AEA-LOGO.png" alt="AEA-LOGO-img">
     <div class="middle-container">
       <h2>المنصات الرسمية على مواقع التواصل الاجتماعي</h2>
-      <a class="btn Facebook" href="https://www.facebook.com/ArEngAcademy?mibextid=9R9pXO">Facebook</a>
-      <a class="btn Instagram" href="https://instagram.com/arengacademy?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a>
-      <a class="btn Telegram" href="https://t.me/ArEngAcademy">Telegram</a>
-      <a class="btn Linkedin" href="https://www.linkedin.com/in/ar-engacademy-a16ab7289">Linkedin</a>
-      <a class="btn YouTube" href="https://www.youtube.com/@ArEngAcademy">YouTube</a>
-      <a class="btn Tiktok" href="https://www.tiktok.com/@arengacademy">Tiktok</a>
+      <a class="btn Facebook" target="_blank" href="https://www.facebook.com/ArEngAcademy?mibextid=9R9pXO">Facebook</a>
+      <a class="btn Instagram" target="_blank" href="https://instagram.com/arengacademy?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D">Instagram</a>
+      <a class="btn Telegram" target="_blank" href="https://t.me/ArEngAcademy">Telegram</a>
+      <a class="btn Linkedin" target="_blank" href="https://www.linkedin.com/in/ar-engacademy-a16ab7289">Linkedin</a>
+      <a class="btn YouTube" target="_blank" href="https://www.youtube.com/@ArEngAcademy">YouTube</a>
+      <a class="btn Tiktok" target="_blank" href="https://www.tiktok.com/@arengacademy">Tiktok</a>
     </div>
 
     <div class="bottom-container">
