--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="bottom-container">
-      <a href="Team.html" class="footer-link">التواصل مع الكادر</a>
+      <a href="Team.html" target="_blank" class="footer-link">التواصل مع الكادر</a>
 
     </div>
   </body>
